--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
-  "name": "nodejs",
+  "name": "06-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
     "start": "ts-node src/index.ts",
+    "dev": "nodemon",
+    "gendata": "ts-node example-data.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "nodemonConfig": {
-    "ignore": [
-      "**/*.test.ts",
-      "**/*.spec.ts",
-      "node_modules"
-    ],
     "watch": [
       "src"
     ],
     "exec": "npm start",
-    "ext": "ts"
+    "ext": "ts",
+    "ingnore": [
+      "node_modules"
+    ]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.195",
     "@types/morgan": "^1.9.4",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
