--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,12 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "noImplicitAny": false,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*"]
+    },
+    "strictPropertyInitialization": false,
+    "experimentalDecorators": true
   }
 }
