--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.3.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "reflect-metadata": "^0.1.13",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
@@ -37,6 +42,7 @@
     "@types/lodash": "^4.14.195",
     "@types/morgan": "^1.9.4",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
