--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,5 +25,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+      - run: npm clear cache
       - run: npm install
-      - run: npm run dev
+      - run: npm run build
+      - run: npm run start
